--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -322,53 +322,53 @@ services:
 #        - ./crypto-config/peerOrganizations/test.hu/ca/:/etc/hyperledger/crypto/peer/ca
 #        - ./crypto-config/ordererOrganizations/test.hu/orderers:/etc/hyperledger/crypto/orderers
 
-#  explorerdb.test.hu:
-#    image: hyperledger/explorer-db:1.1.3
-#    container_name: explorerdb.test.hu
-#    hostname: explorerdb.test.hu
-#    environment:
-#      - DATABASE_DATABASE=fabricexplorer
-#      - DATABASE_USERNAME=hppoc
-#      - DATABASE_PASSWORD=Blockchain4ever
-#    healthcheck:
-#      test: "pg_isready -h localhost -p 5432 -q -U postgres"
-#      interval: 30s
-#      timeout: 10s
-#      retries: 5
-#    volumes:
-#      - explorerdb-vm:/var/lib/postgresql/data
-#    networks:
-#      - test-net
+  explorerdb.test.hu:
+    image: ghcr.io/hyperledger-labs/explorer-db:2.0.0
+    container_name: explorerdb.test.hu
+    hostname: explorerdb.test.hu
+    environment:
+      - DATABASE_DATABASE=fabricexplorer
+      - DATABASE_USERNAME=hppoc
+      - DATABASE_PASSWORD=Blockchain4ever
+    healthcheck:
+      test: "pg_isready -h localhost -p 5432 -q -U postgres"
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    volumes:
+      - explorerdb-vm:/var/lib/postgresql/data
+    networks:
+      - test-net
 
-#  explorer.test.hu:
-#    image: hyperledger/explorer:1.1.3
-#    container_name: explorer.test.hu
-#    hostname: explorer.test.hu
-#    environment:
-#      - DATABASE_HOST=explorerdb.test.hu
-#      - DATABASE_DATABASE=fabricexplorer
-#      - DATABASE_USERNAME=hppoc
-#      - DATABASE_PASSWD=Blockchain4ever
-#      - LOG_LEVEL_APP=debug
-#      - LOG_LEVEL_DB=debug
-#      - LOG_LEVEL_CONSOLE=debug
-#      - LOG_CONSOLE_STDOUT=true
-#      - DISCOVERY_AS_LOCALHOST=false
-#    volumes:
-#      - ./explorer/config.json:/opt/explorer/app/platform/fabric/config.json
-#      - ./explorer/connection-profile:/opt/explorer/app/platform/fabric/connection-profile/
-#      - ./crypto-config/:/tmp/crypto/
-#      -  explorer-vm:/opt/explorer/wallet
-#    ports:
-#      - 8080:8080
-#    depends_on:
-#      - orderer.test.hu
-#      - orderer1.test.hu
-#      - orderer2.test.hu
-#      - peer0.test.hu
-#      - explorerdb.test.hu
-#    networks:
-#      - test-net
+  explorer.test.hu:
+    image: ghcr.io/hyperledger-labs/explorer:2.0.0
+    container_name: explorer.test.hu
+    hostname: explorer.test.hu
+    environment:
+      - DATABASE_HOST=explorerdb.test.hu
+      - DATABASE_DATABASE=fabricexplorer
+      - DATABASE_USERNAME=hppoc
+      - DATABASE_PASSWD=Blockchain4ever
+      - LOG_LEVEL_APP=debug
+      - LOG_LEVEL_DB=debug
+      - LOG_LEVEL_CONSOLE=debug
+      - LOG_CONSOLE_STDOUT=true
+      - DISCOVERY_AS_LOCALHOST=false
+    volumes:
+      - ./explorer/config.json:/opt/explorer/app/platform/fabric/config.json
+      - ./explorer/connection-profile:/opt/explorer/app/platform/fabric/connection-profile/
+      - ./crypto-config/:/tmp/crypto/
+      -  explorer-vm:/opt/explorer/wallet
+    ports:
+      - 8080:8080
+    depends_on:
+      - orderer.test.hu
+      - orderer1.test.hu
+      - orderer2.test.hu
+      - peer0.org1.test.hu
+      - explorerdb.test.hu
+    networks:
+      - test-net
 
 #  prometheus.test.hu:
 #    container_name: prometheus.test.hu
