--- a/client/package.json
+++ b/client/package.json
@@ -15,13 +15,18 @@
         "put": "node PutState.js",
         "putkey": "node PutStateKey.js",
         "get": "node GetState.js",
-        "getkey": "node GetStateKey.js"
+        "getkey": "node GetStateKey.js",
+        "putnew": "node PutStateNew.js",
+        "getnew": "node GetStateNew.js"
     },
     "engineStrict": true,
     "author": "Hyperledger",
     "license": "Apache-2.0",
     "dependencies": {
-        "fabric-ca-client": "^2.2.0",
-        "fabric-network": "^2.2.0"
+        "@hyperledger/fabric-gateway": "^1.5.1",
+        "@grpc/grpc-js": "^1.9.7",
+        "fabric-ca-client": "^2.2.20",
+        "fabric-common": "^2.2.20",
+        "fabric-network": "^2.2.20"
     }
 }
